--- a/wrappers/s2i/python/Dockerfile.nvidia
+++ b/wrappers/s2i/python/Dockerfile.nvidia
@@ -16,7 +16,8 @@ ENV PATH $PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH
 
 RUN pyenv install 3.6.8 && \
     pyenv global 3.6.8 && \
-    pip install -U pip
+    pip install -U pip && \
+    pip install setuptools==41.0.0
 
 RUN mkdir microservice
 WORKDIR /microservice
